--- a/Lab05/ecuaciones-lineales.ipynb
+++ b/Lab05/ecuaciones-lineales.ipynb
@@ -257,7 +257,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "placeholder-lu",
       "metadata": {
         "id": "placeholder-lu"
@@ -268,25 +268,14 @@
         "###     # Implementación de eliminacion Gaussiana\n",
         "###     return xHat\n",
         "import numpy as np\n",
+        "\n",
         "def SolveEliminacionGauss(A_, b_):\n",
-        "    \"\"\"\n",
-        "    Implementación de eliminación Gaussiana con sustitución hacia atrás\n",
-        "    para resolver el sistema A x = b.\n",
-        "\n",
-        "    Args:\n",
-        "        A_: Matriz del sistema (n x n)\n",
-        "        b_: Vector del lado derecho (n)\n",
-        "\n",
-        "    Returns:\n",
-        "        xHat: Solución aproximada del sistema\n",
-        "    \"\"\"\n",
         "    n = len(b_)\n",
         "    A = A_.copy().astype(float)\n",
         "    b = b_.copy().astype(float)\n",
         "\n",
         "    # Eliminación hacia adelante\n",
         "    for k in range(n-1):\n",
-        "        # Pivoteo parcial para evitar división por cero\n",
         "        max_row = np.argmax(np.abs(A[k:, k])) + k\n",
         "        if max_row != k:\n",
         "            A[[k, max_row]] = A[[max_row, k]]\n",
@@ -312,7 +301,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "id": "placeholder-jacobi",
       "metadata": {
         "id": "placeholder-jacobi"
@@ -323,41 +312,27 @@
         "###     # Implementación del Método de Jacobi\n",
         "###     return xHat, k\n",
         "def SolveJacobi(A_, b_, x0_, tol_=1e-6, kmax_=1000):\n",
-        "    \"\"\"\n",
-        "    Implementación del Método de Jacobi para resolver el sistema A x = b.\n",
-        "\n",
-        "    Args:\n",
-        "        A_: Matriz del sistema (n x n)\n",
-        "        b_: Vector del lado derecho (n)\n",
-        "        x0_: Aproximación inicial (n)\n",
-        "        tol_: Tolerancia para el criterio de parada\n",
-        "        kmax_: Número máximo de iteraciones\n",
-        "\n",
-        "    Returns:\n",
-        "        xHat: Solución aproximada del sistema\n",
-        "        k: Número de iteraciones realizadas\n",
-        "    \"\"\"\n",
         "    n = len(b_)\n",
-        "    x = x0_.copy().astype(float)\n",
-        "    x_new = np.zeros_like(x)\n",
+        "    xHat = x0_.copy().astype(float)\n",
+        "    x_new = np.zeros_like(xHat)\n",
         "    k = 0\n",
-        "    residual = np.linalg.norm(A_ @ x - b_, 2)\n",
+        "    res = np.linalg.norm(A_ @ xHat - b_, 2)\n",
         "\n",
-        "    while residual > tol_ and k < kmax_:\n",
+        "    while res > tol_ and k < kmax_:\n",
         "        for i in range(n):\n",
-        "            sigma = np.dot(A_[i, :i], x[:i]) + np.dot(A_[i, i+1:], x[i+1:])\n",
+        "            sigma = np.dot(A_[i, :i], xHat[:i]) + np.dot(A_[i, i+1:], xHat[i+1:])\n",
         "            x_new[i] = (b_[i] - sigma) / A_[i, i]\n",
         "\n",
-        "        x = x_new.copy()\n",
-        "        residual = np.linalg.norm(A_ @ x - b_, 2)\n",
+        "        xHat = x_new.copy()\n",
+        "        res = np.linalg.norm(A_ @ xHat - b_, 2)\n",
         "        k += 1\n",
         "\n",
-        "    return x, k"
+        "    return xHat, k"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "id": "placeholder-gauss-seidel",
       "metadata": {
         "id": "placeholder-gauss-seidel"
@@ -368,39 +343,25 @@
         "###     # Implementación del Método de Gauss-Seidel\n",
         "###     return xHat, k\n",
         "def SolveGaussSeidel(A_, b_, x0_, tol_=1e-6, kmax_=1000):\n",
-        "    \"\"\"\n",
-        "    Implementación del Método de Gauss-Seidel para resolver el sistema A x = b.\n",
-        "\n",
-        "    Args:\n",
-        "        A_: Matriz del sistema (n x n)\n",
-        "        b_: Vector del lado derecho (n)\n",
-        "        x0_: Aproximación inicial (n)\n",
-        "        tol_: Tolerancia para el criterio de parada\n",
-        "        kmax_: Número máximo de iteraciones\n",
-        "\n",
-        "    Returns:\n",
-        "        xHat: Solución aproximada del sistema\n",
-        "        k: Número de iteraciones realizadas\n",
-        "    \"\"\"\n",
         "    n = len(b_)\n",
-        "    x = x0_.copy().astype(float)\n",
+        "    xHat = x0_.copy().astype(float)\n",
         "    k = 0\n",
-        "    residual = np.linalg.norm(A_ @ x - b_, 2)\n",
+        "    res = np.linalg.norm(A_ @ xHat - b_, 2)\n",
         "\n",
-        "    while residual > tol_ and k < kmax_:\n",
+        "    while res > tol_ and k < kmax_:\n",
         "        for i in range(n):\n",
-        "            sigma = np.dot(A_[i, :i], x[:i]) + np.dot(A_[i, i+1:], x[i+1:])\n",
-        "            x[i] = (b_[i] - sigma) / A_[i, i]\n",
+        "            sigma = np.dot(A_[i, :i], xHat[:i]) + np.dot(A_[i, i+1:], xHat[i+1:])\n",
+        "            xHat[i] = (b_[i] - sigma) / A_[i, i]\n",
         "\n",
-        "        residual = np.linalg.norm(A_ @ x - b_, 2)\n",
+        "        res = np.linalg.norm(A_ @ xHat - b_, 2)\n",
         "        k += 1\n",
         "\n",
-        "    return x, k"
+        "    return xHat, k"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "id": "placeholder-cg",
       "metadata": {
         "id": "placeholder-cg"
@@ -412,42 +373,27 @@
         "###     # Requiere que A sea Simétrica Definida Positiva\n",
         "###     return xHat, k\n",
         "def SolveCG(A_, b_, x0_, tol_=1e-6, kmax_=None):\n",
-        "    \"\"\"\n",
-        "    Implementación del Método de Gradiente Conjugado para resolver el sistema A x = b.\n",
-        "    Requiere que A sea Simétrica Definida Positiva.\n",
-        "\n",
-        "    Args:\n",
-        "        A_: Matriz del sistema (n x n), debe ser simétrica definida positiva\n",
-        "        b_: Vector del lado derecho (n)\n",
-        "        x0_: Aproximación inicial (n)\n",
-        "        tol_: Tolerancia para el criterio de parada\n",
-        "        kmax_: Número máximo de iteraciones (si es None, se usa n)\n",
-        "\n",
-        "    Returns:\n",
-        "        xHat: Solución aproximada del sistema\n",
-        "        k: Número de iteraciones realizadas\n",
-        "    \"\"\"\n",
         "    n = len(b_)\n",
         "    if kmax_ is None:\n",
         "        kmax_ = n\n",
         "\n",
-        "    x = x0_.copy().astype(float)\n",
-        "    r = b_ - A_ @ x\n",
+        "    xHat = x0_.copy().astype(float)\n",
+        "    r = b_ - A_ @ xHat\n",
         "    s = r.copy()\n",
         "    k = 0\n",
-        "    residual = np.linalg.norm(r, 2)\n",
+        "    res = np.linalg.norm(r, 2)\n",
         "\n",
-        "    while residual > tol_ and k < kmax_:\n",
+        "    while res > tol_ and k < kmax_:\n",
         "        alpha = np.dot(r, r) / np.dot(s, A_ @ s)\n",
-        "        x = x + alpha * s\n",
-        "        r_new = r - alpha * (A_ @ s)\n",
-        "        beta = np.dot(r_new, r_new) / np.dot(r, r)\n",
-        "        s = r_new + beta * s\n",
-        "        r = r_new\n",
-        "        residual = np.linalg.norm(r, 2)\n",
+        "        xHat = xHat + alpha * s\n",
+        "        rn = r - alpha * (A_ @ s)\n",
+        "        beta = np.dot(rn, rn) / np.dot(r, r)\n",
+        "        s = rn + beta * s\n",
+        "        r = rn\n",
+        "        res = np.linalg.norm(r, 2)\n",
         "        k += 1\n",
         "\n",
-        "    return x, k"
+        "    return xHat, k"
       ]
     },
     {
@@ -543,14 +489,171 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "id": "exercise-code",
       "metadata": {
-        "id": "exercise-code"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "exercise-code",
+        "outputId": "73338368-07d8-41bd-90df-f544c6cad1ba"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tamaño de la matriz del sistema: 8x8\n",
+            "Delta_x = 0.1111 m\n",
+            "\n",
+            "Matriz A:\n",
+            "[[-2.12345679  1.          0.          0.          0.          0.\n",
+            "   0.          0.        ]\n",
+            " [ 1.         -2.12345679  1.          0.          0.          0.\n",
+            "   0.          0.        ]\n",
+            " [ 0.          1.         -2.12345679  1.          0.          0.\n",
+            "   0.          0.        ]\n",
+            " [ 0.          0.          1.         -2.12345679  1.          0.\n",
+            "   0.          0.        ]\n",
+            " [ 0.          0.          0.          1.         -2.12345679  1.\n",
+            "   0.          0.        ]\n",
+            " [ 0.          0.          0.          0.          1.         -2.12345679\n",
+            "   1.          0.        ]\n",
+            " [ 0.          0.          0.          0.          0.          1.\n",
+            "  -2.12345679  1.        ]\n",
+            " [ 0.          0.          0.          0.          0.          0.\n",
+            "   1.         -2.12345679]]\n",
+            "\n",
+            "Vector b:\n",
+            "[-102.4691358   -2.4691358   -2.4691358   -2.4691358   -2.4691358\n",
+            "   -2.4691358   -2.4691358  -52.4691358]\n",
+            "\n",
+            "Solución por método directo (Eliminación Gaussiana):\n",
+            "[77.21525324 61.49411799 50.89571336 44.11159433 40.30421534 39.0035296\n",
+            " 40.04895862 43.56956772]\n",
+            "\n",
+            "Solución por Jacobi (142 iteraciones, residual=9.39e-07):\n",
+            "[77.21525263 61.49411688 50.89571182 44.11159263 40.30421358 39.0035281\n",
+            " 40.04895748 43.56956713]\n",
+            "\n",
+            "Solución por Gauss-Seidel (72 iteraciones, residual=8.33e-07):\n",
+            "[77.2152525  61.49411677 50.8957119  44.11159286 40.30421403 39.00352858\n",
+            " 40.04895796 43.56956741]\n",
+            "\n",
+            "La matriz A es simétrica\n",
+            "La matriz A no es definida positiva (no se puede aplicar CG)\n",
+            "\n",
+            "Comparación de resultados:\n",
+            "Eliminación Gaussiana: [77.21525324 61.49411799 50.89571336 44.11159433 40.30421534 39.0035296\n",
+            " 40.04895862 43.56956772]\n",
+            "Jacobi:              [77.21525263 61.49411688 50.89571182 44.11159263 40.30421358 39.0035281\n",
+            " 40.04895748 43.56956713]\n",
+            "Gauss-Seidel:        [77.2152525  61.49411677 50.8957119  44.11159286 40.30421403 39.00352858\n",
+            " 40.04895796 43.56956741]\n",
+            "\n",
+            "Comparación de convergencia (número de iteraciones):\n",
+            "Jacobi: 142\n",
+            "Gauss-Seidel: 72\n"
+          ]
+        }
+      ],
       "source": [
-        "### Alumno..."
+        "\n",
+        "#Manuel Casanova Casanova\n",
+        "# Parámetros del problema\n",
+        "L = 1.0          # Longitud de la barra (m)\n",
+        "m2 = 10.0        # Parámetro m^2 (m^-2)\n",
+        "T_inf = 20.0     # Temperatura ambiente (°C)\n",
+        "T0 = 100.0       # Temperatura en x=0 (°C)\n",
+        "TL = 50.0        # Temperatura en x=L (°C)\n",
+        "N = 10           # Número de nodos\n",
+        "tol = 1e-6       # Tolerancia para métodos iterativos\n",
+        "kmax = 1000      # Máximo de iteraciones\n",
+        "\n",
+        "# 1. Calcular tamaño de la matriz y Δx\n",
+        "Delta_x = L / (N - 1)\n",
+        "nodos_interiores = N - 2\n",
+        "print(f\"Tamaño de la matriz del sistema: {nodos_interiores}x{nodos_interiores}\")\n",
+        "print(f\"Delta_x = {Delta_x:.4f} m\")\n",
+        "\n",
+        "# 2. Construir la matriz A y el vector b\n",
+        "C = 2 + m2 * Delta_x**2\n",
+        "R = -m2 * Delta_x**2 * T_inf\n",
+        "\n",
+        "# Inicializar matriz A (tri-diagonal)\n",
+        "A = np.zeros((nodos_interiores, nodos_interiores))\n",
+        "for i in range(nodos_interiores):\n",
+        "    A[i, i] = -C\n",
+        "    if i > 0:\n",
+        "        A[i, i-1] = 1\n",
+        "    if i < nodos_interiores - 1:\n",
+        "        A[i, i+1] = 1\n",
+        "\n",
+        "# Construir vector b\n",
+        "b = np.full(nodos_interiores, R)\n",
+        "b[0] -= T0\n",
+        "b[-1] -= TL\n",
+        "\n",
+        "print(\"\\nMatriz A:\")\n",
+        "print(A)\n",
+        "print(\"\\nVector b:\")\n",
+        "print(b)\n",
+        "\n",
+        "# 3. Resolver usando método directo (Eliminación Gaussiana)\n",
+        "T_direct = SolveEliminacionGauss(A, b)\n",
+        "print(\"\\nSolución por método directo (Eliminación Gaussiana):\")\n",
+        "print(T_direct)\n",
+        "\n",
+        "# 4. Resolver usando métodos iterativos\n",
+        "# Vector inicial (ceros o unos)\n",
+        "x0 = np.zeros(nodos_interiores)\n",
+        "\n",
+        "# Método de Jacobi\n",
+        "T_jacobi, iter_jacobi = SolveJacobi(A, b, x0, tol, kmax)\n",
+        "residual_jacobi = np.linalg.norm(A @ T_jacobi - b, 2)\n",
+        "print(f\"\\nSolución por Jacobi ({iter_jacobi} iteraciones, residual={residual_jacobi:.2e}):\")\n",
+        "print(T_jacobi)\n",
+        "\n",
+        "# Método de Gauss-Seidel\n",
+        "T_gs, iter_gs = SolveGaussSeidel(A, b, x0, tol, kmax)\n",
+        "residual_gs = np.linalg.norm(A @ T_gs - b, 2)\n",
+        "print(f\"\\nSolución por Gauss-Seidel ({iter_gs} iteraciones, residual={residual_gs:.2e}):\")\n",
+        "print(T_gs)\n",
+        "\n",
+        "# 5. Resolver usando Gradiente Conjugado\n",
+        "# Verificar si la matriz es simétrica definida positiva\n",
+        "if np.allclose(A, A.T):\n",
+        "    print(\"\\nLa matriz A es simétrica\")\n",
+        "    # Verificar si es definida positiva (todos los autovalores > 0)\n",
+        "    eigenvalues = np.linalg.eigvals(A)\n",
+        "    if np.all(eigenvalues > 0):\n",
+        "        print(\"La matriz A es definida positiva\")\n",
+        "\n",
+        "        T_cg, iter_cg = SolveCG(A, b, x0, tol, kmax)\n",
+        "        residual_cg = np.linalg.norm(A @ T_cg - b, 2)\n",
+        "        print(f\"\\nSolución por Gradiente Conjugado ({iter_cg} iteraciones, residual={residual_cg:.2e}):\")\n",
+        "        print(T_cg)\n",
+        "    else:\n",
+        "        print(\"La matriz A no es definida positiva (no se puede aplicar CG)\")\n",
+        "else:\n",
+        "    print(\"\\nLa matriz A no es simétrica (no se puede aplicar CG)\")\n",
+        "\n",
+        "# Comparación de resultados\n",
+        "print(\"\\nComparación de resultados:\")\n",
+        "print(f\"Eliminación Gaussiana: {T_direct}\")\n",
+        "print(f\"Jacobi:              {T_jacobi}\")\n",
+        "print(f\"Gauss-Seidel:        {T_gs}\")\n",
+        "if 'T_cg' in locals():\n",
+        "    print(f\"Gradiente Conjugado: {T_cg}\")\n",
+        "\n",
+        "# Comparación de convergencia\n",
+        "print(\"\\nComparación de convergencia (número de iteraciones):\")\n",
+        "print(f\"Jacobi: {iter_jacobi}\")\n",
+        "print(f\"Gauss-Seidel: {iter_gs}\")\n",
+        "if 'iter_cg' in locals():\n",
+        "    print(f\"Gradiente Conjugado: {iter_cg}\")\n",
+        "\n",
+        "\n"
       ]
     }
   ],
