--- a/Lab05/ecuaciones-lineales.ipynb
+++ b/Lab05/ecuaciones-lineales.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ncas13-gif/Mec-270-Lab/blob/main/Lab05/ecuaciones-lineales.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "a0b1c2d3",
       "metadata": {
         "id": "a0b1c2d3"
@@ -676,7 +686,8 @@
       "version": "3.13.3"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
