--- a/Lab06/eigenvalues.ipynb
+++ b/Lab06/eigenvalues.ipynb
@@ -223,13 +223,67 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "23135b4b-b447-4b5d-a8cb-eec6f5342a40",
       "metadata": {
-        "id": "23135b4b-b447-4b5d-a8cb-eec6f5342a40"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 219
+        },
+        "id": "23135b4b-b447-4b5d-a8cb-eec6f5342a40",
+        "outputId": "9b5cb993-57ed-4fb1-a0a6-22f1b3e08696"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'G' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-f260dd7ed12e>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# Calcular normas de la matriz G\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mnorma_1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mG\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# Norma 1 (máxima suma de columnas)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mnorma_inf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mG\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# Norma infinito (máxima suma de filas)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mnorma_frobenius\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mG\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# Norma Frobenius\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'G' is not defined"
+          ]
+        }
+      ],
+      "source": [
+        "#Manuel Casanova\n",
+        "#1. Teoría y localización\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# Calcular normas de la matriz G\n",
+        "norma_1 = np.max(np.sum(np.abs(G), axis=0))  # Norma 1 (máxima suma de columnas)\n",
+        "norma_inf = np.max(np.sum(np.abs(G), axis=1))  # Norma infinito (máxima suma de filas)\n",
+        "norma_frobenius = np.sqrt(np.sum(G**2))  # Norma Frobenius\n",
+        "norma_2 = np.sqrt(np.max(np.linalg.eigvals(G.T @ G)))  # Norma 2 (espectral)\n",
+        "\n",
+        "print(f\"Norma 1: {norma_1}\")\n",
+        "print(f\"Norma infinito: {norma_inf}\")\n",
+        "print(f\"Norma Frobenius: {norma_frobenius}\")\n",
+        "print(f\"Norma 2: {norma_2}\")\n",
+        "\n",
+        "# Los valores propios están acotados por la norma 2\n",
+        "cota_max_valor_propio = norma_2\n",
+        "\n",
+        "# Calcular discos de Gershgorin\n",
+        "diagonales = np.diag(G)\n",
+        "radios = np.sum(np.abs(G), axis=1) - np.abs(diagonales)\n",
+        "\n",
+        "# Graficar los discos\n",
+        "plt.figure(figsize=(10, 6))\n",
+        "for i in range(len(G)):\n",
+        "    circulo = plt.Circle((diagonales[i], 0), radios[i], fill=False, color='blue', alpha=0.5)\n",
+        "    plt.gca().add_patch(circulo)\n",
+        "    plt.scatter(diagonales[i], 0, color='red', s=10)\n",
+        "\n",
+        "plt.title('Discos de Gershgorin para la matriz G')\n",
+        "plt.xlabel('Parte real')\n",
+        "plt.ylabel('Parte imaginaria')\n",
+        "plt.grid(True)\n",
+        "plt.axis('equal')\n",
+        "plt.show()"
+      ]
     }
   ],
   "metadata": {
